--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico.png">
 		<style>
 			.brown {
 				color: #7a5c58;
 			}
-
 		</style>
 	</head>
 	<body class="is-preload">
@@ -89,7 +88,7 @@
 									<header>
 										<h2 class="brown"><a href="Deligo.html">Deligo<br /></a></h2>
 									</header>
-									<a href="Deligo.html" class="image fit"><img src="images/Deligo/cover page.jpg" alt=" Deligo Logo" /></a>
+									<a href="Deligo.html" class="image fit"><img src="images/Deligo/deligo cover page new  copy.jpg" alt=" Deligo Logo" /></a>
 									<p>Short Info about the project goes here</p>
 									<ul class="actions special">
 										<li><a href="Deligo.html" class="button">View Project</a></li>
@@ -99,7 +98,7 @@
 									<header>
 										<h2 class="brown"><a href="Publications.html">My Publications<br /></a></h2>
 									</header>
-									<a href="Publications.html" class="image fit"><img src="images/Graphics Logo.jpg" alt="My Publications" /></a>
+									<a href="Publications.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
 									<p>Some of my Graphics published in articles</p>
 									<ul class="actions special">
 										<li><a href="Publications.html" class="button">View Project</a></li>
@@ -109,7 +108,7 @@
 									<header>
 										<h2 class="brown"><a href="Graphics.html">My Other Graphics<br /></a></h2>
 									</header>
-									<a href="Graphics.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Graphics" /></a>
+									<a href="Graphics.html" class="image fit"><img src="images/Graphics/graphics cover page.jpg" alt="My Graphics" /></a>
 									<p>My Other Graphics</p>
 									<ul class="actions special">
 										<li><a href="Graphics.html" class="button">View Project</a></li>
