--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="brown"><a href="Publications.html">My Publications<br /></a></h2>
+										<h2 class="brown"><a href="Publications.html">Publications<br /></a></h2>
 									</header>
 									<a href="Publications.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
 									<p>Some of my Graphics published in articles</p>
