--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
 								</article>
 								<article>
 									<header>
+										<h2 class="brown"><a href="Scabal.html">Publications<br /></a></h2>
+									</header>
+									<a href="Scabal.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
+									<p>Some of my Graphics published in articles</p>
+									<ul class="actions special">
+										<li><a href="Scabal.html" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2 class="brown"><a href="Graphics.html">My Other Graphics<br /></a></h2>
 									</header>
 									<a href="Graphics.html" class="image fit"><img src="images/Graphics/graphics cover page.jpg" alt="My Graphics" /></a>
