--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<header>
 										<h2 class="brown"><a href="Publications.html">Publications<br /></a></h2>
 									</header>
-									<a href="Publications.html" class="image fit"><img src="images/" alt="My Publications" /></a>
+									<a href="Publications.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
 									<p>Some of my Graphics published in articles</p>
 									<ul class="actions special">
 										<li><a href="Publications.html" class="button">View Project</a></li>
