--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<header>
 										<h2 class="brown"><a href="Scabal.html">Scabal<br /></a></h2>
 									</header>
-									<a href="Scabal.html" class="image fit"><img src="images/Publications Logo.jpg" alt="Scabal" /></a>
+									<a href="Scabal.html" class="image fit"><img src="images/Scabal logo .png" alt="Scabal" /></a>
 									<p>Some of my Graphics published in articles</p>
 									<ul class="actions special">
 										<li><a href="Scabal.html" class="button">View Project</a></li>
