--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/x-icon" href="images/favicon.ico.png">
 		<style>
-			.brown {
-				color: #7a5c58;
+			.black {
+				color: #000000;
 			}
 		</style>
 	</head>
@@ -53,7 +53,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2 class="brown"><a href="Decoroom.html"> Decoroom</a></h2>
+									<h2 class="black"><a href="Decoroom.html"> Decoroom</a></h2>
 									<p style = "font-family: sans-serif; font-style: normal;">An AR based app to shop interior design and house decor items</p>
 								</header>
 								<a href="Decoroom.html" class="image main"><img src="images/Decoroom new .jpg" alt="Decoroom Logo" ></a>
@@ -66,7 +66,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2 class="brown"><a href="Foodling.html">Foodling<br /></a></h2>
+										<h2 class="black"><a href="Foodling.html">Foodling<br /></a></h2>
 									</header>
 									<a href="Foodling.html" class="image fit"><img src="images/Foodling/foodling cover page.jpg" alt="Foodling Logo" /></a>
 									<p>Food App</p>
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<header></header>
-										<h2 class="brown"><a href="Birth N Body.html">Birth N Body<br /></a></h2>
+										<h2 class="black"><a href="Birth N Body.html">Birth N Body<br /></a></h2>
 									</header>
 									<a href="Birth N Body.html" class="image fit"><img src="images/BIRTH N BODY/birth n body cover page.jpg" alt="Birth N Body Logo" /></a>
 									<p>Teaching Bodies & Birth Through a Game.</p>
@@ -86,7 +86,7 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="brown"><a href="Deligo.html">Deligo<br /></a></h2>
+										<h2 class="black"><a href="Deligo.html">Deligo<br /></a></h2>
 									</header>
 									<a href="Deligo.html" class="image fit"><img src="images/Deligo/deligo cover page new  copy.jpg" alt=" Deligo Logo" /></a>
 									<p>Short Info about the project goes here</p>
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="brown"><a href="Publications.html">Publications<br /></a></h2>
+										<h2 class="black"><a href="Publications.html">Publications<br /></a></h2>
 									</header>
 									<a href="Publications.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
 									<p>Some of my Graphics published in articles</p>
@@ -106,7 +106,7 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="brown"><a href="Scabal.html">Scabal<br /></a></h2>
+										<h2 class="black"><a href="Scabal.html">Scabal<br /></a></h2>
 									</header>
 									<a href="Scabal.html" class="image fit"><img src="images/Scabal logo .png" alt="Scabal" /></a>
 									<p>Some of my Graphics published in articles</p>
@@ -116,7 +116,7 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="brown"><a href="Graphics.html">My Other Graphics<br /></a></h2>
+										<h2 class="black"><a href="Graphics.html">My Other Graphics<br /></a></h2>
 									</header>
 									<a href="Graphics.html" class="image fit"><img src="images/Graphics/graphics cover page.jpg" alt="My Graphics" /></a>
 									<p>My Other Graphics</p>
