scabal web page update

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="black"><a href="Scabal.html">Scabal<br /></a></h2>
+										<h2 class="black"><a href="scabal.html">Scabal<br /></a></h2>
 									</header>
 									<a href="Scabal.html" class="image fit"><img src="images/Scabal logo .png" alt="Scabal" /></a>
 									<p>Some of my Graphics published in articles</p>
 									<ul class="actions special">
-										<li><a href="Scabal.html" class="button">View Project</a></li>
+										<li><a href="scabal.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
