--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 								</article>
 								<article>
 									<header>
-										<h2 class="black"><a href="Graphics.html">My Other Graphics<br /></a></h2>
+										<h2 class="black"><a href="Graphics.html">My Main Graphics<br /></a></h2>
 									</header>
 									<a href="Graphics.html" class="image fit"><img src="images/Graphics/graphics cover page.jpg" alt="My Graphics" /></a>
-									<p>My Other Graphics</p>
+									<p>My Main Graphics</p>
 									<ul class="actions special">
 										<li><a href="Graphics.html" class="button">View Project</a></li>
 									</ul>
