Scabal logo changes made

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<header>
 										<h2 class="black"><a href="scabal.html">Scabal<br /></a></h2>
 									</header>
-									<a href="scabal.html" class="image fit"><img src="images/scabal logo .png" alt="scabal" /></a>
+									<a href="scabal.html" class="image fit"><img src="images/Scabal logo.png" alt="scabal" /></a>
 									<p>Some of my Graphics published in articles</p>
 									<ul class="actions special">
 										<li><a href="scabal.html" class="button">View Project</a></li>
