main page changes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<h2 class="black"><a href="Publications.html">Publications<br /></a></h2>
 									</header>
 									<a href="Publications.html" class="image fit"><img src="images/Publications Logo.jpg" alt="My Publications" /></a>
-									<p>Some of my Graphics published in articles</p>
+									<p>My work in Digital publication</p>
 									<ul class="actions special">
 										<li><a href="Publications.html" class="button">View Project</a></li>
 									</ul>
@@ -109,7 +109,7 @@
 										<h2 class="black"><a href="scabal.html">Scabal<br /></a></h2>
 									</header>
 									<a href="scabal.html" class="image fit"><img src="images/Scabal logo.png" alt="scabal" /></a>
-									<p>Some of my Graphics published in articles</p>
+									<p>Scabal case study</p>
 									<ul class="actions special">
 										<li><a href="scabal.html" class="button">View Project</a></li>
 									</ul>
